--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <script>
         function saveContact() {
           var phoneNumber = "+919831650460"; // Replace with your phone number
-          window.location.href = 'content://com.android.contacts/contacts/add?phone=' + encodeURIComponent(phoneNumber);
+          window.location.href = 'content://com.goole.android.contacts/contacts/add?phone=' + encodeURIComponent(phoneNumber);
         }
       </script>
   </body>
