--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
       <a class="link" href="tel:+919831650460" target="_blank">
         <i class="fas fa-phone-alt">&nbsp;</i> Call Us
       </a>
-      <a class="link"> <button onclick="saveContact()">Save Contact</button> </a>
-      <a class="link" href="https://www.linkedin.com/in/johnggli" target="_blank">
+      <a class="link" href="contacts.csv" target="_blank">
         <i class="fab fa-linkedin">&nbsp;</i>Linkedin
       </a>
       <a class="link" href="https://www.facebook.com/johnggli" target="_blank">
