--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="logo_3d_cropped.png" type="image/x-icon" />
     <!-- Font Awesome icons -->
     <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"> -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <!-- Core theme CSS -->
     <link rel="stylesheet" href="style.css">
   </head>
@@ -52,27 +52,24 @@
 
     <div id="links">
       <a class="link" href="tel:+919831650460" target="_blank">
-        <i class="fas fa-phone-alt">&nbsp;</i> Call Us
+        <i class="fas fa-phone">&nbsp;</i> Call Us
       </a>
-      <a class="link" href="contacts.csv" target="_blank">
-        <i class="fab fa-linkedin">&nbsp;</i>Linkedin
+      <a class="link" href="3d Shine Eye_Interior.vcf" target="_blank">
+        <i class="fa-regular fa-address-book">&nbsp;</i> Add to Contacts
       </a>
-      <a class="link" href="https://www.facebook.com/johnggli" target="_blank">
-        <i class="fab fa-facebook">&nbsp;</i>Facebook
-      </a>
-      <a class="link" href="https://www.instagram.com/johnggli" target="_blank">
+      <a class="link" href="https://instagram.com/3dshineeyeinteriors?igshid=MGNiNDI5ZTU=" target="_blank">
         <i class="fab fa-instagram">&nbsp;</i>Instagram
       </a>
-      <a class="link" href="https://twitter.com/johnggli" target="_blank">
-        <i class="fab fa-twitter">&nbsp;</i>Twitter
+      <a class="link" href="https://drive.google.com/drive/folders/1C1B_UeW1my3dYr3mUd2kBdcsahUkeW6L" target="_blank">
+        <i class="fa-solid fa-object-group"">&nbsp;</i> Our Work
       </a>
-      <a class="link" href="https://myanimelist.net/profile/johnggli" target="_blank">
-        <i class="fa fa-play-circle">&nbsp;</i>MyAnimeList
+      <a class="link" href="mailto:3dshineeyeinterior@gmail.com" target="_blank">
+        <i class="fa-regular fa-envelope">&nbsp;</i> Mail Us
       </a>
     </div>
 
     <div id="hashtag">
-      #BeHappy❤
+      #Inspiring Spaces❤
     </div>
     <script>
         function saveContact() {
