--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 
     <div id="userName">
-      3d shine eye interiors.
+      3d shine eye interior.
     </div>
 
     <div id="links">
