--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 
     <div id="userName">
-      3d shine eye interior.
+      3d Shine Eye Interior
     </div>
 
     <div id="links">
